src/objects/Alliance_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alliance Registrations</relationshipLabel>
        <relationshipName>Alliance_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <formula>IF(TEXT(Registration_Status__c)=&quot;Denied&quot;,Denied_Date__c - DATEVALUE(CreatedDate),
IF(TEXT(Registration_Status__c)=&quot;Closed&quot;,Closed_Date__c - DATEVALUE(CreatedDate),
IF(ISBLANK(Opportunity__c),TODAY()-DATEVALUE(CreatedDate),
IF(Opportunity__r.X1_if_Open__c=0,Opportunity__r.Close_Date_adj_for_Loss__c-DATEVALUE(CreatedDate),TODAY()-DATEVALUE(CreatedDate)))))</formula>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alliance_Calculated_Amount__c</fullName>
        <formula>IF(NOT(ISBLANK(Opportunity__r.of_Virtual_Machines__c)),92 * Opportunity__r.of_Virtual_Machines__c,
IF(NOT(ISBLANK(Opportunity__r.of_Cores__c)),92 * Opportunity__r.of_Cores__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alliance Calculated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_First_Name__c</fullName>
        <formula>IF(LEFT(Alliance_Partner_Rep__c,FIND(&quot; &quot;,Alliance_Partner_Rep__c))&lt;&gt;&quot;&quot;,LEFT(Alliance_Partner_Rep__c,FIND(&quot; &quot;,Alliance_Partner_Rep__c)),Alliance_Partner_Rep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alliance Partner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Rep_Email__c</fullName>
        <label>Alliance Partner Rep Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Rep_Phone__c</fullName>
        <label>Alliance Partner Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Rep__c</fullName>
        <inlineHelpText>Partner Rep</inlineHelpText>
        <label>Alliance Partner Rep</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner_Sales_Manager__c</fullName>
        <label>Alliance Partner Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner__c</fullName>
        <label>Alliance Partner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Alliance_Partners</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Registration_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alliance Registration Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Rep_Notes__c</fullName>
        <inlineHelpText>The Alliance Rep Notes field is meant for internal notes that are not BMC facing. Updating this field will not alert BMC of any changes made to the Registration.</inlineHelpText>
        <label>Alliance Rep Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alliance_Rep__c</fullName>
        <label>Alliance Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Alliance_Reps</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Other Solutions Under Evaluation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Count__c</fullName>
        <label>Core Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Engagement_Status__c</fullName>
        <formula>Customer_Account_Name__c &amp; &quot; (&quot; &amp; TEXT(Engagement_Status__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Account (Engagement Status)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <label>Customer Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Email__c</fullName>
        <label>Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <label>Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Phone__c</fullName>
        <label>Customer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Title__c</fullName>
        <label>Customer Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alliance Registrations</relationshipLabel>
        <relationshipName>Alliance_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Website__c</fullName>
        <label>Customer Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Days_Pending__c</fullName>
        <formula>IF(TEXT(Registration_Status__c)&lt;&gt;&quot;Pending&quot;,null,
IF(NOT(ISBLANK(Pending_Date__c)),TODAY()-Pending_Date__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denial_Reason__c</fullName>
        <label>Denial Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Denied_Date__c</fullName>
        <label>Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#33CC00</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment_Type__c</fullName>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incumbent</fullName>
                </value>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Opportunity_Value__c</fullName>
        <label>Expected Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()),MONTH(TODAY()+6),DAY(TODAY()))</defaultValue>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor_Other__c</fullName>
        <label>Hardware Vendor (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor__c</fullName>
        <label>Hardware Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arista</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Oracle/Sun</fullName>
                </value>
                <value>
                    <fullName>SimpliVity</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Count__c</fullName>
        <label>Host Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hypervisor_Vendor_Other__c</fullName>
        <label>Hypervisor Vendor (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hypervisor_Vendor__c</fullName>
        <label>Hypervisor Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>Hyper-V (Microsoft)</fullName>
                </value>
                <value>
                    <fullName>Xen (Open Source)</fullName>
                </value>
                <value>
                    <fullName>Xen (Citrix)</fullName>
                </value>
                <value>
                    <fullName>KVM (Openstack)</fullName>
                </value>
                <value>
                    <fullName>KVM (Redhat)</fullName>
                </value>
                <value>
                    <fullName>OracleVM</fullName>
                </value>
                <value>
                    <fullName>Heterogeneous</fullName>
                </value>
                <value>
                    <fullName>IBM PowerVM</fullName>
                </value>
                <value>
                    <fullName>Acropolis</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>The Next Steps field is a public facing notes field that will alert the Alliance Partner and their team of any updates you make to this field. Use this if you want to provide an update to the Alliance Partner regarding this Registration.</inlineHelpText>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Alliance Registrations</relationshipLabel>
        <relationshipName>Alliance_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_First_Name_Capitalized__c</fullName>
        <formula>UPPER(LEFT(Alliance_Partner_First_Name__c, 1)) &amp;MID(Alliance_Partner_First_Name__c, 2,LEN(Alliance_Partner_First_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner First Name Capitalized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Date__c</fullName>
        <label>Pending Date Stamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Environment_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cirba</fullName>
                </value>
                <value>
                    <fullName>vRealize</fullName>
                </value>
                <value>
                    <fullName>SolarWinds</fullName>
                </value>
                <value>
                    <fullName>CloudForms</fullName>
                </value>
                <value>
                    <fullName>Mesosphere</fullName>
                </value>
                <value>
                    <fullName>Kubernetes</fullName>
                </value>
                <value>
                    <fullName>RightScale</fullName>
                </value>
                <value>
                    <fullName>vFoglight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Opportunity_Description__c</fullName>
        <label>Project/Opportunity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <inlineHelpText>Turbonomic Sales Manager</inlineHelpText>
        <label>Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <inlineHelpText>Turbonomic Sales Rep</inlineHelpText>
        <label>Sales Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socket_Count__c</fullName>
        <label>Socket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_of_Opportunity_when_Linked__c</fullName>
        <label>Stage of Opportunity when Linked</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Vendor_Other__c</fullName>
        <label>Storage Vendor (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Vendor__c</fullName>
        <label>Storage Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlantis</fullName>
                </value>
                <value>
                    <fullName>DataGravity</fullName>
                </value>
                <value>
                    <fullName>Dell Compellent</fullName>
                </value>
                <value>
                    <fullName>Dell MD Series (NetApp OEM)</fullName>
                </value>
                <value>
                    <fullName>EMC (Other)</fullName>
                </value>
                <value>
                    <fullName>EMC (VMAX)</fullName>
                </value>
                <value>
                    <fullName>EMC (VNX)</fullName>
                </value>
                <value>
                    <fullName>EMC (VNX-F)</fullName>
                </value>
                <value>
                    <fullName>EMC (XtremIO)</fullName>
                </value>
                <value>
                    <fullName>Heterogeneous</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP (3PAR)</fullName>
                </value>
                <value>
                    <fullName>HP (Other)</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>IBM N Series (NetApp OEM)</fullName>
                </value>
                <value>
                    <fullName>NetApp</fullName>
                </value>
                <value>
                    <fullName>Nimble Storage</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other (Specify)</fullName>
                </value>
                <value>
                    <fullName>Pure Storage</fullName>
                </value>
                <value>
                    <fullName>SolidFire</fullName>
                </value>
                <value>
                    <fullName>Tegile</fullName>
                </value>
                <value>
                    <fullName>Tintri</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Violin Memory</fullName>
                </value>
                <value>
                    <fullName>XtremIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Opportunity_ID__c</fullName>
        <label>3rd Party Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_if_Opportunity_Attached__c</fullName>
        <formula>IF(ISBLANK(Opportunity__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 if Opportunity Attached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alliance Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TURBO{00000}</displayFormat>
        <label>Alliance Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alliance Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Alliance_Create_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW(),
$UserRole.Name&lt;&gt;&quot;VP of LATAM Sales and Global Accounts US&quot;,
NOT(CONTAINS($UserRole.Name,&quot;Global Accounts US&quot;)),
$UserRole.Name&lt;&gt;&quot;Alliance Manager&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
$User.Full_Name__c&lt;&gt;&quot;Gregory Dunn&quot;)</errorConditionFormula>
        <errorMessage>You do not have access to create an Alliance Registration. Please contact a strategic alliance team member to create the registration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Closed_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Registration_Status__c),
TEXT(Registration_Status__c)=&quot;Closed&quot;,
ISBLANK(Closed_Reason__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Closed_Reason__c</errorDisplayField>
        <errorMessage>Please fill in the Closed Reason so that the Alliance Partner is notified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Denial_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Registration_Status__c),
TEXT(Registration_Status__c)=&quot;Denied&quot;,
ISBLANK(Denial_Reason__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Denial_Reason__c</errorDisplayField>
        <errorMessage>Please fill in the Denial Reason so that the Alliance Partner is notified.</errorMessage>
    </validationRules>
</CustomObject>